# new-video-downloader

./: README.md  index.html  package-lock.json  package.json
readme/: README_zh-TW.md
src/: App.jsx  LanguageContext.jsx  autoDownload.jsx  index.css  main.jsx  serverUrl.jsx  theme.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/pages/: DownloadHistory.jsx  Preferences.jsx  TwitterPicker.jsx  YoutubeProcess.jsx
src/util/: checkAndInitJson.js  download history.js  error map.js  errorMap.js  loadHistory.js  localization.js  saveNewHistory.js  themeColor.js
src/util/localization/: localization.js  localizationDownloadHistory.js  localizationPreference.js  localizationTwitterPicker.js  localizationYoutubeProcess.js
update-content/: en-US.md  ja-JP.md  ko-KR.md  tr-TR.md  zh-TW.md
updates/: latest.json
